--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,21 @@
+# Generated Files #
 *.class
+build/
+gen-src/
+log/
+zip/
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.ear
 
+# eclipse files #
+.classpath
+.project
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/bin/
