The gitignore was updated.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@ zip/
 .classpath
 .project
 
+# intelliJ files #
+DP2_Assignment4.iml
+.idea/
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /bin/
